version mobile : barre de recherche centrée et filtres correctement alignés en 2 par ligne entre 368px et 320px

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -45,6 +45,11 @@
   .bouton span {
     display: none;
   }
+
+#rechercher{
+    justify-content: center;
+}
+
   /* On affiche l’icône */
   .bouton i {
     display: inline-block;
@@ -57,10 +62,17 @@
   }
   .filtres {
     flex-wrap: wrap;
+    gap: 10px;
   }
+
+.filtres i{
+    margin-right: 8px;
+}
+
   .filtres a {
     flex: 0 0 auto;
     min-width: 120px;
+    padding: 0 0 0 10px;
   }
   .hebergements-and-populaires {
     flex-direction: column;
